--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -5,9 +5,9 @@ homepage:
 # showcase
 showcase:
   enable: true
-  title: "Hello, I’m Andreas."
-  subtitle: "Front-End Developer"
-  description: "I work at <a target='_blank' href='https://radity.com/'>Radity</a>, a software development company in Switzerland. And I am a Raditian. You get the idea where theme name comes from. Keep cool, stay in touch. You can download this theme from <a target='_blank' href='https://github.com/radity/raditian-free-hugo-theme'>github</a>."
+  title: "Hello, I’m Roy."
+  subtitle: "M.D. | Author"
+  description: ""
   image:
     alt: "Showcase keyboard and mouse image"
     x: "img/showcase/showcase.png"
@@ -21,51 +21,23 @@ showcase:
     btnText: "Contact"
     URL: "https://radity.com/en/contact/"
 
-  socialLinks:
-    - icon: "linkedin"
-      URL: "https://www.linkedin.com/company/radity/"
-
-    - icon: "github"
-      URL: "https://github.com/radity"
-
-    - icon: "twitter"
-      URL: "https://twitter.com/radity"
-
-    - icon: "dribbble"
-      URL: "https://dribbble.com/radity"
-
-    - icon: "behance"
-      URL: "https://www.behance.net/radity-digital"
-
-    - icon: "youtube"
-      URL: "https://www.youtube.com/channel/UCojEc6SPO-W1_CoeHhK9-Zw"
-
-    - icon: "instagram"
-      URL: "https://www.instagram.com/teamradity/"
-
-    - icon: "facebook"
-      URL: "https://www.facebook.com/raditycom/"
-
-    - icon: "codepen"
-      URL: "#"
-
-    - icon: "yelp"
-      URL: "https://www.yelp.com/"
-
 # about
 about:
   enable: true
   title: "Who am I?"
-  content: '<p class="lead">
-    I am back, after a few days of vacationing with family. Weather was awesome, the beach was
-    full of nasty jelly-fish, yuk! All-in-all, life has been good. I hope life has been as
-    good for all of you.
+  content: "<p class='lead'>
+    Roy Espiritu recalls many a summers ago on a dre, without nay preparation, he joined an 
+    extemporaneous story telling contest at the last minute and unanimously won first place.  
+    He was in middle school.  He became the school's feature editor.  And a writer was born.
+    Roy is bilingual, speaks conversational Cebuano.  His heritage is Filipino with 
+    Hispanic, Chinese, and Japanese ethnicity.
     </p>
-    <p class="lead">
-    My area of focus lies in designing web and mobile products, user research as well as
-    leading of design & front-end teams. I enjoy designing and coding the UI as much as
-    talking with users to iterate and improve the experiences that reach business goals.
-    </p>'
+    <p class='lead'>
+    A movie buff, he has a personal library of 
+    films he loves outside of an eclectic collection of books.  Some of them served as an 
+    inspiration to his writing.  His earlier work is in illustrated comic magazine.  Roy 
+    Espiritu lives in the Midwest.  He is a physician, married with three children.
+    </p>"
   button:
     icon: "icon-smile-fill"
     btnText: "About Me"
@@ -74,88 +46,29 @@ about:
     x: "img/who-am-i/user-picture.png"
     _2x: "img/who-am-i/user-picture@2x.png"
 
-# education
-education:
-  enable: true
-  title: "Education"
-  items:
-    - university: "University of Waterloo"
-      year: "2012-2017"
-      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
-
-    - university: "Sir John A Macdonald CI"
-      year: "2009-2012"
-      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
-
-# experience
-experience:
-  enable: true
-  title: "Experience"
-  description: "Over 15+ years of experience working with companies from all over the world. I design & develop digital products to help businesses and improve people's lives."
-  button:
-    icon: "icon-linkedin-fill"
-    btnText: "Linkedin"
-    URL: "https://www.linkedin.com/company/radity/"
-  button2:
-    icon: "icon-profile-fill"
-    btnText: "Download My Resume"
-    URL: "#"
-
-  items:
-    - title: "Sr. Front-End Developer"
-      company: "Radity"
-      duration: "Feb 2011 - Sep 2019"
-
-    - title: "Sr. Front-End Developer"
-      company: "Textic"
-      duration: "Apr 2010 - Jan 2011"
-
-    - title: "Jr. Front-End Developer"
-      company: "Cyberse"
-      duration: "Jun 2009 - Mar 2010"
-
 # Client & Work
 client_and_work:
-  title: "Clients & Works"
+  title: "Works"
   enable: true
 
-  clients:
-    - logo:
-        x: "img/clients/asgardia.png"
-        _2x: "img/clients/asgardia@2x.png"
-      alt: "Asgardia"
-
-    - logo:
-        x: "img/clients/earth-2.png"
-        _2x: "img/clients/earth-2@2x.png"
-      alt: "Earth 2.0"
-
-    - logo:
-        x: "img/clients/goldline.png"
-        _2x: "img/clients/goldline@2x.png"
-      alt: "Goldline"
-
-    - logo:
-        x: "img/clients/kanba.png"
-        _2x: "img/clients/kanba@2x.png"
-      alt: "Kanba"
-
-    - logo:
-        x: "img/clients/zoo-tv.png"
-        _2x: "img/clients/zoo-tv@2x.png"
-      alt: "Zoo"
-
-    - logo:
-        x: "img/clients/ztos.png"
-        _2x: "img/clients/ztos@2x.png"
-      alt: "Ztos"
-
   works:
-    - title: "Radity Finance - UI Kit"
-      description: "We have been receiving a lot of requests for a Finance Kit recently due to the popularity of Fintech."
+    - title: "The Ideal Woman"
+      description: "Pearl’s mother, Aurora, immigrated to the United States to meet her 
+      American suitor. As a Filipina, she struggled to be accepted into her new culture. 
+      Although, she was quick to learn the foreign ways of her new country; she continued 
+      to honor her culture, a knowledge she passes on to her daughter, Pearl.
+      Once Pearl grows up, she decides it is time to see her mothers birthplace. 
+      As soon as Pearl lands in the Philippines, she feels at home. She feels as 
+      though she learned about her home country through her mothers stories. 
+      She is at ease in the warm breeze, surrounded by the sound of the native tongue. 
+      She immerses herself in the culture and catches the eye of a wealthy local matriarch.  
+      The older woman thinks Pearl would make a perfect wife for her grandson. Pearl is soon 
+      spoiled and courted by the whole family, but a tragedy steals her dreams. She is cast 
+      out and must now find a way to still love the country of her mothers birth, the country that hurt her. 
+      Aurora was a strong woman in a foreign place; her daughter can be too."
       button:
         icon: "icon-arrow-right"
-        btnText: "Case Study"
+        btnText: "Purchase Book"
         URL: "#"
       image:
         x: "img/works/radity-finance.jpg"
@@ -163,80 +76,20 @@ client_and_work:
       is_even: true
 
     - title: "Swiss Fintech Website"
-      description: "The Swiss Finance + Technology Association is the leading FinTech hub in Switzerland."
+      description: "THE SERPENT'S GUILE is a psychological thriller with three main characters - 
+      a famous writer, his personal chauffeur and the unwitting biracial sex worker embroiled 
+      into the dark world of the writer. All three of them hiding secrets, all puppets of greed, 
+      all three magnificent liars. Set in an opulent background of the privileged few, 
+      it shows humanity at its lowest and at its most human element. Unlike books of same genre, 
+      readers know who the serpent is from the beginning. The crux is how each one of the 
+      three protagonists try to manipulate each other - like a game of chess, a charade, 
+      a cat and mouse game. A cliff hanger to the very last page, it keeps the readers 
+      guessing what happens next: who wins, who lives, and who dies."
       button:
         icon: "icon-arrow-right"
-        btnText: "Case Study"
+        btnText: "Purchase Book"
         URL: "#"
       image:
         x: "img/works/swissfintech.jpg"
         _2x: "img/works/swissfintech@2x.jpg"
       is_even: false
-
-    - title: "Robo Advisor"
-      description: "Robo Advisor is a Swiss Wealth Manager and wants to create the best digital experience for its UNHW clients across the world. We started with a whiteboard."
-      button:
-        icon: "icon-arrow-right"
-        btnText: "Case Study"
-        URL: "#"
-      image:
-        x: "img/works/robo-advisor.jpg"
-        _2x: "img/works/robo-advisor@2x.jpg"
-      is_even: true
-
-# testimonial
-testimonial:
-  enable: true
-  title: "Testimonials"
-  items:
-    - name: "Daniel Jordan"
-      position: "Phonet, CEO"
-      content: "Cold calling can be a great way to generate quality leads. You get to speak to the gatekeepers and stakeholders, and you get a great insight into their requirements and influences. But cold calling is an art-form. It can be daunting, it’s always a lot of work, and you always need to make a good impression."
-      image:
-        x: "img/testimonials/daniel-jordan.jpg"
-        _2x: "img/testimonials/daniel-jordan@2x.jpg"
-
-    - name: "Jonathan Peters"
-      position: "Textic, CEO"
-      content: "Whether you or your loved one is encountering the natural decrease in mobility that occurs with the passing of time, or deals with an illness-related lack of physical agility, a stair lift can be the ideal way to put you in charge of your home again. Regardless of the shape or make of your living accommodation."
-      image:
-        x: "img/testimonials/jonathan-peters.jpg"
-        _2x: "img/testimonials/jonathan-peters@2x.jpg"
-
-    - name: "Antonio Willis"
-      position: "Cyberse, CEO"
-      content: "In this digital generation where information can be easily obtained within seconds, business cards still have retained their importance in the achievement of increased business exposure and business sales. If your business already has a bunch of printed cards distributed to a number of potential customers and yet."
-      image:
-        x: "img/testimonials/antonio-willis.jpg"
-        _2x: "img/testimonials/antonio-willis@2x.jpg"
-
-# contact
-contact:
-  enable: true
-  title: "Contact"
-  form:
-    method: "POST"
-    action: "#"
-    full_name: "Full Name"
-    email: "Email Address"
-    message: "Type Your Message Here"
-  phone:
-    title: "Phone Number"
-    number: "+41 (44) 505 10 99"
-  email:
-    title: "Email"
-    email: '<a href="mailto:team@radity.com">team@radity.com</a>'
-  address:
-    title: "Address"
-    address: "Radity GmbH<br />Max-Bill-Platz 5, 8050 Zürich"
-  button:
-    icon: "icon-mail-fill"
-    btnText: "Send Message"
-
-# newsletter
-newsletter:
-  enable: true
-  title: "Newsletter subscription"
-  success_message: "Successfully subscribed"
-  error_message: "Error while subscribing."
-  note: "We'll never share your email with anyone else."
