--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ theme = "raditian-free-hugo-theme"
   weight = 2
 
   [[menu.header]]
-  name = "Portfolio"
+  name = "Works"
   URL = "#portfolio"
   weight = 3
 
@@ -41,7 +41,7 @@ theme = "raditian-free-hugo-theme"
   weight = 2
 
   [[menu.footer]]
-  name = "Portfolio"
+  name = "Works"
   URL = "#portfolio"
   weight = 3
 
