--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -59,7 +59,7 @@ client_and_work:
         URL: "https://www.amzn.com/gp/product/149173048X/"
       image:
         x: "images/works/IdealWoman.jpg"
-        _x2: "images/works/IdealWoman.jpg"
+        _2x: "images/works/IdealWoman@2x.jpg"
       is_even: true
 
     - title: "The Serpent's Guile"
@@ -74,5 +74,5 @@ client_and_work:
         URL: "https://www.amzn.com/dp/197725487X/"
       image:
         x: "images/works/SerpentsGuile.jpg"
-        _x2: "images/works/SerpentsGuile.jpg"
+        _2x: images/works/SerpentsGuile@2x.jpg
       is_even: true
